--- a/index.html
+++ b/index.html
@@ -4,10 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
-    
+    <div class="container-fluid">
+        <nav class="navbar bg-dark">
+            <p class="header-style mx-auto">Weather Dashboard</p>
+        </nav>
+        <div class="row">
+            <div class="col-4 bg-light">
+                <div class="mt-2">Search for a City:</div>
+                <div class="input-group mb-3">
+                    <input type="text" id="city" class="form-control">
+                    <div class="input-group-append">
+                        <button class="btn btn-primary" type="button" id="searchCity"><i class="fas fa-search"></i></button>
+                    </div>
+                </div>
+                <div class="list-group"></div>
+            </div>
+            <div class="col-8">
+                <div class="row p-2">
+                    <div class="card">
+                        <div class="card-body"></div>
+                    </div>
+                </div>
+                    <div class="row">
+                        <h4>5-Day Forecast:</h4>
+                    </div>
+                <div id="weeklyForecast" class="row"></div>
+            </div>
+        </div>  
+    </div>
+
+    <script src="https://kit.fontawesome.com/1cc5977b2c.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="assets/js/weather.js"></script>
 </body>
 </html>
